Position Fix
Fixed Position of code blocks so they always appear below (60px) the nav bar

--- a/styles/background.css
+++ b/styles/background.css
@@ -8,6 +8,7 @@ body {
   height: 100%;
   padding: 9.5px;
   margin: 0px;
+  margin-top: 60px;
   font-size: .8vw;
   line-height: 1.42857143;
   color: white;
